# tryhard

./: CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
src/: backoff_strategies.rs  lib.rs  on_retry.rs
