[package]
name = "tryhard"
version = "0.2.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/tryhard"
homepage = "https://github.com/EmbarkStudios/tryhard"
description = "Easily retry futures"
repository = "https://github.com/EmbarkStudios/tryhard"
categories = ["rust-patterns"]
keywords = ["tokio", "futures", "retry"]

[dependencies]
futures = "0.3"
pin-project = "1"

[dependencies.tokio-03]
package = "tokio"
version = "0.3"
default-features = false
features = ["rt", "time", "macros", "test-util", "sync"]
optional = true

[dependencies.tokio-02]
package = "tokio"
version = "0.2"
default-features = false
features = ["time", "macros", "test-util", "rt-core", "sync"]
optional = true

[features]
default = ["tokio-03"]
